@@ -1,5 +1,17 @@
 2019-10-31  Jonathan Wakely  <jwakely@redhat.com>
 
+	* include/bits/range_access.h (ranges::begin): Combine array and
+	non-array overloads into one function template. Only use ADL for
+	classes and enums.
+	(ranges::end, ranges::size): Likewise. Make unbounded arrays
+	ill-formed.
+	(ranges::rbegin, ranges::rend): Only use ADL for classes and enums.
+	Reformat _S_noexcept() functions to mirror operator() structure.
+	* testsuite/std/ranges/access/begin.cc: Check incomplete array.
+	* testsuite/std/ranges/access/end_neg.cc: New test.
+	* testsuite/std/ranges/access/size.cc: Check array of incomplete type.
+	* testsuite/std/ranges/access/size_neg.cc: New test.
+
 	* testsuite/24_iterators/range_access*.cc: Move to ...
 	* testsuite/24_iterators/range_access/range_access*.cc: ... here.
 	* testsuite/24_iterators/range_access/range_access_cpp20_neg.cc: New
